made compatible with graal native